@@ -33,7 +33,7 @@ dependencies {
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.6.0.24.10'
-    implementation 'org.springframework:spring-jdbc:6.1.13'
+    implementation 'org.springframework:spring-jdbc:6.1.14'
 
     /*
     implementation 'org.incenp:sssom-core:0.7.9'
