@@ -1,3 +1,6 @@
+Nov 15, 2024
+  GO taxon constrains: added handling of obsolete terms
+
 Nov 12, 2024
   EfoXrefGenerator: fixed -- created synonyms should always have type set to 'xref'
 
